# FastAPI_Practice

./: .gitignore  FASTAPI_ROADMAP.md  app.db  pyproject.toml
alembic/: env.py
alembic/versions/: 47e8d1cff31b_initial_schema_with_courses.py  49f1f9d64b43_initial_schema_with_uuid_and_password.py  5f53320d0d96_create_users_table.py  f5a48bcc8c6f_added_role_to_user.py
src/: main.py
src/api/: courseRoutes.py  dependencies.py  routes.py  userRoutes.py
src/core/: config.py  database.py  exceptions.py  security.py
src/models/: course.py  course_to_user.py  user.py
src/repositories/: course_repo.py  user_repo.py
src/schemas/: course.py  user.py
src/services/: course_service.py
tests/: conftest.py
tests/unit/: test_course_service.py
