[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "pwdlib[bcrypt]>=0.3.0",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
]
