[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "pwdlib[bcrypt]>=0.3.0",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "sqlalchemy>=2.0.51",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "alembic/*"]

[tool.coverage.report]
fail_under = 30